tests/fixtures/typeck/local_non_bool_condition.diag
error: condition must be Bool
  --> local_non_bool_condition.veyl:3:8
   |
  3 |     if value {
   |        ^^^^^
