tests/fixtures/typeck/local_non_bool_condition.veyl
fn main() {
    let value = 1;
    if value {
        print("bad");
    }
}
